Fix sidebar overlap with !important on margin-left
Added !important to ensure margin-left: 280px and width calc
override any conflicting styles.

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -18,8 +18,8 @@
 
 .page {
   @include breakpoint($large) {
-    margin-left: 250px;
-    width: calc(100% - 270px);
+    margin-left: 280px !important;
+    width: calc(100% - 300px) !important;
     max-width: 900px;
   }
 
